--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,3 +20,5 @@ jobs:
         with:
           name: Package
           path: build/libs
+      - name: Make gradlew executable
+        run: chmod +x ./gradlew
