--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,4 @@
-rootProject.name = 'kotlin-mock-server'
-
+include ':mock-server-core'
+include ':mock-server-junit4'
+include ':mock-server-okhttp'
+include ':mock-server-netty'
