--- a/settings.gradle
+++ b/settings.gradle
@@ -2,3 +2,4 @@ include ':mock-server-core'
 include ':mock-server-junit4'
 include ':mock-server-okhttp'
 include ':mock-server-netty'
+// include ':mock-server-android'
