--- a/settings.gradle
+++ b/settings.gradle
@@ -3,3 +3,4 @@ include ':mock-server-junit4'
 include ':mock-server-okhttp'
 include ':mock-server-netty'
 // include ':mock-server-android'
+include ':sample'
