--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: CI
+name: build staging artifcats
 
 on:
   push:
@@ -9,20 +9,24 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Run a multi-line script
+      - name: Set java8
         uses: actions/setup-java@v2
         with:
           java-version: '8'
           distribution: 'adopt'
-      - name: Make gradlew executable
-        run: chmod +x ./gradlew
+
+      - name: Before
+        run: |
+          chmod +x ./gradlew
+          chmod +x ./gradle/wrapper/gradle-wrapper.jar
+
+      - name: ktlint
+        run: |
+           gradle -q klintCheck
+
       - name: Build with Gradle
         run: ./gradlew build -x test
       - uses: actions/upload-artifact@v2
         with:
           name: Package
           path: build/libs
-      - name: Coveralls
-        uses: coverallsapp/github-action@master
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
