--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,7 @@ jobs:
            gradle :detektFull
 
       - name: Build with Gradle
-        run: ./gradlew build -x test
+        run: ./gradlew build test
       - uses: actions/upload-artifact@v2
         with:
           name: Package
