--- a/.github/workflows/staging_build.yml
+++ b/.github/workflows/staging_build.yml
@@ -18,14 +18,13 @@ jobs:
         run: |
           chmod +x ./gradlew
           chmod +x ./gradle/wrapper/gradle-wrapper.jar
-#      - name: Code check
-#        run: |
-#           gradle ktlintCheck
-#           gradle :detektFull
+      - name: Code check
+        run: |
+           gradle ktlintCheck
+           gradle :detektFull
       - name: Codecov
         run: |
             ./gradlew build
             ./gradlew test
-            ./gradlew jacocoTestReport
             ./gradlew jacocoFullReport
             bash <(curl -s https://codecov.io/bash)
