--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,6 @@
 include ':mock-server-core'
 include ':mock-server-junit4'
-//include ':mock-server-okhttp'
-//include ':mock-server-netty'
+include ':mock-server-okhttp'
+include ':mock-server-netty'
 // include ':mock-server-android'
-//include ':sample'
+include ':sample'
