--- a/.editorconfig
+++ b/.editorconfig
@@ -3,6 +3,7 @@ root = true
 [*]
 indent_style = space
 indent_size = 4
+max_line_length = 120
 
 end_of_line = lf
 charset = utf-8
@@ -14,3 +15,6 @@ ij_kotlin_imports_layout = *
 
 [*.md]
 trim_trailing_whitespace = false
+
+[{*.yml, *.yaml}]
+indent_size = 2
