--- a/mock-server-core/gradle.properties
+++ b/mock-server-core/gradle.properties
@@ -1,4 +1,3 @@
-POM_NAME=Kotlin mock server
-POM_ARTIFACT_ID=kotlin-mock-server
+POM_NAME=Kotlin mock server core
+POM_ARTIFACT_ID=mock-server-core
 POM_PACKAGING=jar
-POM_DESCRIPTION=Core library of mock
