--- a/.github/workflows/release_build.yml
+++ b/.github/workflows/release_build.yml
@@ -22,9 +22,9 @@ jobs:
           chmod +x ./gradlew
           chmod +x ./gradle/wrapper/gradle-wrapper.jar
 
-      - name: Prepare release
-        run: |
-          echo "::set-env name=RELEASE_VERSION::${GITHUB_REF:11}"
+#      - name: Prepare release
+#        run: |
+#          echo "::set-env name=RELEASE_VERSION::${GITHUB_REF:11}"
 
       - name: Upload release
         run: ./gradlew publishAllPublicationsToMavenCentralRepository --no-daemon --no-parallel
