--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,7 @@ POM_LICENCE_NAME=The Apache Software License, Version 2.0
 POM_LICENCE_URL=https://www.apache.org/licenses/LICENSE-2.0.txt
 POM_LICENCE_DIST=repo
 
-POM_DEVELOPER_ID=infeez
+POM_DEVELOPER_ID=infeez TEST
 POM_DEVELOPER_NAME=Vadim Vasyanin
 POM_DEVELOPER_EMAIL=infeez@gmail.com
 POM_DEVELOPER_URL=https://github.com/infeez/kotlin-mock-server/
