add name and description to props for maven plugin

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,5 @@
+POM_NAME=Kotlin mock server
+POM_DESCRIPTION=Kotlin mock server
 POM_URL=https://github.com/infeez/kotlin-mock-server/
 POM_INCEPTION_YEAR=2019
 
