--- a/mock-server-junit4/gradle.properties
+++ b/mock-server-junit4/gradle.properties
@@ -1,3 +1,4 @@
 POM_NAME=Kotlin mock server junit4
+POM_DESCRIPTION=Library for user mock server with junit4 rule
 POM_ARTIFACT_ID=mock-server-junit4
 POM_PACKAGING=jar
