--- a/mock-server-okhttp/gradle.properties
+++ b/mock-server-okhttp/gradle.properties
@@ -1,3 +1,4 @@
 POM_NAME=Kotlin mock server okhttp
+POM_DESCRIPTION=Mock server by okhttp server
 POM_ARTIFACT_ID=mock-server-okhttp
 POM_PACKAGING=jar
